# cpp-pre-commit-hooks

./: .editorconfig  .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  LICENSE  README.md  setup.cfg
.github/workflows/: ci.yml
pre_commit_hooks/: check_using_namespace_directive.py
tests/: check_using_namespace_directive_test.py
tests/resources/using_namespace_directive/nok/: using_namespace_hpp_file.hpp  using_namespace_local.cc  using_namespace_local.h  using_namespace_nested.h
tests/resources/using_namespace_directive/ok/: not_using.h  using_directive_global.h  using_directive_local.cc  using_directive_local.h
