[metadata]
name = cpp_pre_commit_hooks
version = 0.1.1
description = C++ hooks for pre-commit based on Google C++ Style Guide.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gringolito/cpp-pre-commit-hooks
author = Filipe Utzig
author_email = filipeutzig@gmail.com
license = Beerware
license_file = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.6.1

[options.entry_points]
console_scripts =
    check-using-namespace-directive = pre_commit_hooks.check_using_namespace_directive:main

[options.packages.find]
exclude =
    tests*

[bdist_wheel]
universal = True
